Page margin consistency. Center the filters in the SubNav on mobile and give it more breathing room. Remove horizontal margin on about page on mobile for better readability. Fixed last Details-Item having bottom margin.

--- a/thingmenn-frontend/src/components/about/styles.css
+++ b/thingmenn-frontend/src/components/about/styles.css
@@ -1,10 +1,13 @@
 .About {
   height: 100%;
-  margin: 2rem;
   padding: 1rem;
   background: white;
 }
-
+@media (min-width: 678px) {
+  .About {
+    margin: 2rem;
+  }
+}
 .About p {
   max-width: 50em;
   margin: 1rem;
